--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -76,6 +76,8 @@
 \usepackage{algorithmicx}
 \usepackage{hyperref}
 \usepackage{listings}
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
 
 \hypersetup{
     colorlinks=true,
@@ -103,6 +105,36 @@
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\C}{\mathbb C}
 \newcommand{\Q}{\mathbb Q}
+
+\lstdefinelanguage{OCaml}{
+  keywords={let,rec,if,then,else},
+  sensitive=true,
+  basicstyle=\ttfamily,
+  keywordstyle=\bfseries,
+  showstringspaces=false,
+  morecomment=[s]{(*}{*)},
+  morestring=[b]"
+}
+
+\lstset{
+  language=Caml,
+  frame=single,
+  numbers=left,
+  numberstyle=\tiny,
+  stepnumber=1,
+  numbersep=5pt,
+  tabsize=2,
+  breaklines=true,
+  prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+  showtabs=false,
+  showspaces=false,
+  showstringspaces=false,
+  basicstyle=\ttfamily,
+  identifierstyle=\ttfamily,
+  commentstyle=\color{gray},
+  keywordstyle=\color{blue},
+  stringstyle=\color{red}
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -265,13 +297,115 @@ Na splošno knjižnica Domainslib poenostavlja postopek pisanja vzporednih in so
 Zagotavlja nam visokonivojski (ang. high-level) vmesnik za upravljanje nalog, usklajevanje sinhronizacije in izkoriščanje vzporednosti, 
 kar olajša izkoriščanje celotnega potenciala večjedrnih procesorjev ter doseganje boljše zmogljivosti.
 
-
-
+Za več informacij in uradno izvedbo knjižnice Domainslib lahko obiščete uraden repozitorij knjižnice Domainslib na
+GitHub-u na naslovu \url{https://github.com/ocaml-multicore/domainslib}.
 
 
 \subsection{Paralelizacija 101: Računanje Fibonaccijevih števil}
 
+Čeprav ne gre za grafovski algoritem, se mi je zdelo poučno, da najprej predstavim osnovne koncepte paralelizacije na preprostem primeru. 
+Izbral sem si paralelno računanje Fibonaccijevih števil (na naiven način, ki, kot bomo videli, terja časovno zahtevnost $O(2^n)$).
+
+Preprosto funkcijo, ki računa Fibonaccijevo število, lahko zapišemo na zelo preprost način:
+
+\begin{lstlisting}
+  let rec fib n =
+    if n < 2 then 1
+    else fib (n-1) + fib (n-2)
+\end{lstlisting}
+
+\begin{figure}[htb]
+  \centering
+\begin{tikzpicture}[node distance=2cm]
+
+  \node (n0) at (0,0) {$n$};
+  \node (n1) at (-2,-2) {$n-1$};
+  \node (n2) at (2,-2) {$n-2$};
+  \node (n3) at (-4,-4) {$n-2$};
+  \node (n4) at (0,-4) {$n-3$};
+  \node (n5) at (4,-4) {$n-3$};
+  \node (n6) at (-5.5,-6) {$n-4$};
+  \node (n7) at (-3,-6) {$n-5$};
+  \node (n8) at (-1,-6) {$n-4$};
+  \node (n9) at (0,-6) {...};
+
+  \draw [->] (n0) -- (n1);
+  \draw [->] (n0) -- (n2);
+  \draw [->] (n1) -- (n3);
+  \draw [->] (n1) -- (n4);
+  \draw [->] (n2) -- (n4);
+  \draw [->] (n2) -- (n5);
+  \draw [->] (n3) -- (n6);
+  \draw [->] (n3) -- (n7);
+  \draw [->] (n4) -- (n8);
+  \draw [->] (n4) -- (n9);
+
+\label{fig:fib-graph}
+% TODO: caption
+
+\end{tikzpicture}
+\end{figure}
 
 
+Zato se seveda vprašamo, kako bi lahko to funkcijo paralelizirali. Očiten odgovor je, da bi lahko paralelno računali $fib(n-1)$ in $fib(n-2)$ ter to počeli,
+dokler ne pridemo do baze rekurzije. To lahko predstavimo z grafom, kot je prikazano na sliki \ref{fig:fib-graph}.
+Problem, na katerega sem naletel ob empiričnem testiranju svojega programa, je, da je ta način paralelizacije precej neučinkovit, 
+saj računamo na prevečih nitih hkrati. Število niti ki jih ustvarimo namreč narašča eksponentno z $n$.
+Zato sem se v svojem programu poslužil sledeče ideje: Paraleliziraj kose kode, ki vzamejo največ časa, 
+pri čemer naredi čim manj asinhronih klicev na knjižnico Domainslib.
+
+Spet, empirično sem ugotovil, da se neparalelni program začne zatikati tam nekje pri računanju Fibonaccijevih števil večjih od 38, zato sem program spisal tako,
+da števila večja od 38 računam paralelno po zgoraj opisanem postopku (na vsakem koraku ustvarim dve asinhroni nalogi), števila manjša od 38 pa računam neparalelno.
+
+\begin{lstlisting}
+module T = Domainslib.Task
+
+let rec fib n = if n < 2 then 1 else fib (n - 1) + fib (n - 2)
+
+let rec fib_par pool n =
+  if n <= 38 then fib n
+  else
+    let a = T.async pool (fun _ -> fib_par pool (n - 1)) in
+    let b = T.async pool (fun _ -> fib_par pool (n - 2)) in
+    T.await pool a + T.await pool b
+\end{lstlisting}
+
+
+
+Za nadaljevanje bomo potrebovali (opisno) definicijo domen pri paralelnem računanju:
+\begin{definicija}
+  V paralelnem računanju \textbf{domena} pomeni neodvisno računsko enoto, ki lahko sočasno dela z drugimi domenami.
+  Dana domena predstavlja od drugih domen ločen izvedbeni kontekst, ki lahko vzporedno izvaja navodila in izračune.
+  V kontektu paralelnega računalništva se izraz \textbf{število domen} nanaša na število vzporednih izvršilnih enot, ki so 
+  trenutno na voljo za izvajanje izračunov.
+\end{definicija}
+
+Ustavim se pri najpomembnejših ukazih:
+\begin{itemize}
+  \item Z ukazom \texttt{module T = Domainslib.Task} ustvarimo okrajšavo za Domainslib.Task, kar nam olajša pisanje kode.
+  \item Funkcija \texttt{fib\_par} sprejme objekt tipa \texttt{pool} (pool je zadolžen za inicializacijo množice domen, namenjene za 
+        paralelno izvajanje. Tipično je ``pool'' inicializiran s številom domen).
+  \item \texttt{fib\_par} preveri, če je število, ki ga računamo, manjše ali enako 38. 
+        Če je, potem izračuna Fibonaccijevo število na klasičen način (na eni niti oz. na eni domeni).
+        Sicer, pa ustvari dve asinhroni nalogi, ki računata Fibonaccijevo število za $n-1$ in $n-2$. Ti nalogi se bosta izvajali vzporedno.
+\end{itemize}
+
+Ta postopek sem pognal na računalniku z 8 jedri, ter dobil naslednje rezultate v odvisnosti od zahtevanega števila domen:
+
+\begin{figure}[h!]
+  \centering
+  \caption{Čas izračuna 43. Fibonaccijevega števila v odvisnosti od števila domen}
+  \includegraphics[width=13cm]{slike/fib_par_v_odvisnosti_od_domen.jpg}
+  \label{fig:paralelizacija-fizikalno}
+\end{figure}
+
+Vidimo, da število domen vpliva na hitrost izračuna: Z večanjem števila domen se čas izračuna Fibonaccijevega števila zmanjšuje,
+kar bi za paralelizacijo tudi pričakovali. Vendar pa se čas izračuna Fibonaccijevega števila ne zmanjšuje linearno z večanjem števila domen,
+temveč sprva relativno hitro, nato pa se čas izračuna pri 14. domeni ustali tam nekje pri treh četrtinkah sekunde.
+Seveda se to razlikuje od enega računalnika do drugega, razmerje med časom izračuna nekega Fibonaccijevega števila pri eni domeni ter pri
+npr. desetih pa bi moralo biti podobno na vseh računalnikih (opomba: Te izračune poganjam na osemjedrnem Applovem MacBooku Air M1).
+
+
+\pagebreak
 
 \end{document}
